--- a/intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,11 +162,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.9796]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using matrix multiplication"
+    "## Calculate the output of this network using matrix multiplication\n",
+    "weights_reshaped = weights.view(5, 1)\n",
+    "torch.mm(features, weights_reshaped)"
    ]
   },
   {
@@ -204,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,11 +251,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.3171]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Your solution here"
+    "## Your solution here\n",
+    "Z1 = torch.mm(features, W1) + B1\n",
+    "H1 = activation(Z1)\n",
+    "Z2 = torch.mm(H1, W2) + B2\n",
+    "output = activation(Z2)\n",
+    "output"
    ]
   },
   {
@@ -265,29 +294,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.random.rand(4,3)\n",
-    "a"
+    "import numpy as np\n",
+    "a = np.random.rand(4,3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.2075, 0.1418, 0.3291],\n",
+      "        [0.3709, 0.9809, 0.3744],\n",
+      "        [0.2659, 0.1511, 0.6992],\n",
+      "        [0.7161, 0.5996, 0.0804]], dtype=torch.float64)\n"
+     ]
+    }
+   ],
    "source": [
     "b = torch.from_numpy(a)\n",
-    "b"
+    "print(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.2075202 , 0.14183094, 0.32906001],\n",
+       "       [0.37085628, 0.98088664, 0.37444987],\n",
+       "       [0.26586265, 0.15113394, 0.69921583],\n",
+       "       [0.71608949, 0.59955203, 0.08043297]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b.numpy()"
    ]
@@ -301,9 +355,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.4150, 0.2837, 0.6581],\n",
+       "        [0.7417, 1.9618, 0.7489],\n",
+       "        [0.5317, 0.3023, 1.3984],\n",
+       "        [1.4322, 1.1991, 0.1609]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Multiply PyTorch Tensor by 2, in place\n",
     "b.mul_(2)"
@@ -311,13 +379,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.4150404 , 0.28366189, 0.65812003],\n",
+       "       [0.74171257, 1.96177329, 0.74889974],\n",
+       "       [0.53172531, 0.30226788, 1.39843165],\n",
+       "       [1.43217898, 1.19910405, 0.16086594]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Numpy array matches new values from Tensor\n",
     "a"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -336,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
